Resolves: tdf#149482 don't insert if the mouse is not still pressed

In repeat callback, if we didn't see a mouse up, but find that the mouse
is no longer pressed at this point, then bail

Change-Id: I6e5d1d7201065fadcc2242fd52323ffb56766383
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146947
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>